# ReelHouse

./: .gitignore  README.md  Symbolic_Interactionism.md  _debug.json  _full.json  _probe.json  _sweep.json  netlify.toml  package-lock.json
.cache/: captures.jsonl  captures.pre-bootstrap.jsonl  diff_signature.py  mitm_capture.py
_legacy/_nuxt/: _id_.8wbvrfox.css  _id_.b_gw-qpe.css  adf5s9_y.js  b4h22_is.js  b761ulsf.js  bb9a5kn2.js  becqnjl6.js  bfcpkj0i.js  boucflyu.js  categoryfilter.dlzouk7b.css  cfgkcjwb.js  collectioncard.bzrcogkt.css  cov41w8y.js  cptxu-sg.js  dcar6yyz.js  dcfzxvfm.js  dlgppzvy.js  dq6khgg_.js  entry.mbtcuxoj.css  ey9qs2a1.js  index.blpr6lfr.css  nhznvzva.js  nmnqagah.js  olj4taqd.js  olpukxon.js  ulpqqx4o.js  waekvnxm.js  xx7woni2.js  yxsop0pn.js
backend/: .dockerignore  .env.example  Dockerfile  androguard.db  fly.toml  package-lock.json  package.json  pyproject.toml  requirements.txt  test_domain.py  test_niche.py  test_resolve.py  test_resolve_more.py  test_series.py  vercel.json
backend/app/: cache.py  config.py  fzmovies.py  main.py  matching.py  moviebox_client.py  stats.py
backend/app/routes/: captions.py  debug.py  proxy.py  stats.py  stream.py  tmdb.py  trending.py
frontend/: .env.example  error.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/components/: AppHeader.vue  CategoryFilter.vue  CollectionCard.vue  FilterSidebar.vue  Hero.vue  MovieCard.vue  MovieRow.vue  Player.vue
frontend/composables/: useAnilist.ts  useContinueWatching.ts  useMyList.ts  useSearchHistory.ts  useSeriesStructure.ts  useStream.ts  useTmdb.ts  useWatchHistory.ts
frontend/layouts/: default.vue
frontend/pages/: admin.vue  history.vue  index.vue  movies.vue  (+3 more)
moviebox-fast-main/: README.md  main.py  requirements.txt
proxy/: fly.toml  package.json  server.js
worker/: moviebox-proxy.js  wrangler.toml
(+2979 files in other folders)
